--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+<style>
+.resume-btn {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 10px 0;
+}
 
+.resume-btn:hover {
+    background-color: #0056b3;
+}
+
+</style>
 <body>
 
   <!--
@@ -188,6 +204,9 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
+ <li class="navbar-item">
+      <a href="#resume" class="navbar-link" data-nav-link>Resume</a>
+    </li>
 
         </ul>
 
@@ -221,6 +240,7 @@
           designing for some of the most well-known brands, always striving to make products that are both eye-catching and easy
           to use.
           </p>
+
         </section>
 
 
@@ -497,7 +517,8 @@
               </div>
 
             </li>
-
+<a href="https://docs.google.com/document/d/1VLU5S4iKBewXaYXbl5qmpTC3GlQ20GwE/edit?pli=1" target="new_blank">
+           <button class="resume-btn" data-resume-btn>View Resume</button></a>
           </ul>
 
         </section>
@@ -577,14 +598,14 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://innova-matrimony.onrender.com/" target="new_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="mat.png" alt="finance" loading="lazy">
+                 <img src="mat.png" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Matrimony Management System</h3>
@@ -595,7 +616,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://it-academic-calendar.web.app/" target="new_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -612,7 +633,24 @@
               </a>
             </li>
 
-    
+              <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/Rayhonsamo2004/smart_survillance_sytem">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                 <img src="mat.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Smart Survillance System</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
           </ul>
 
         </section>
